--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,5 @@
 postgresinit:
-	sudo docker run --name postgres15 -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=password -d postgres:15-alpine
+	docker run --name postgres15 -p 5433:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=password -d postgres:15-alpine
 
 postgres:
 	docker exec -it postgres15 psql
@@ -10,4 +10,10 @@ createdb:
 dropdb:
 	docker exec -it postgres15 dropdb go-chat
 
-.PHONY: postgresinit postgres createdb dropdb
+migrateup:
+	migrate -path db/migrations -database "postgresql://root:password@localhost:5433/go-chat?sslmode=disable" -verbose up
+
+migratedown:
+	migrate -path db/migrations -database "postgresql://root:password@localhost:5433/go-chat?sslmode=disable" -verbose down
+
+.PHONY: postgresinit postgres createdb dropdb migrateup migratedown
